<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecordingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <Button
            android:id="@+id/stopButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/stop"
            android:textSize="24sp"
            app:icon="@drawable/ic_baseline_stop_24"
            app:iconGravity="start"
            app:iconSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            app:icon="@drawable/ic_baseline_cancel_24"
            app:iconGravity="start"
            app:iconSize="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/timeRemainingBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="2sp"
            android:max="1800"
            android:progress="0"
            app:layout_constraintBottom_toTopOf="@+id/stopButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/currentPositionCard"
            android:layout_width="149dp"
            android:layout_height="197dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/pastelBlue"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/timeRemainingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="196dp">

                <TextView
                    android:id="@+id/locationError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="8dp"
                    android:text="@string/err"
                    android:textSize="10sp"
                    android:textColor="@color/LightYellow"
                    app:layout_constraintBottom_toTopOf="@+id/compass"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/currentXPos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/x"
                    android:textColor="@color/LightYellow"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/currentYPos"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/currentYPos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/y"
                    android:textColor="@color/LightYellow"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/currentElevation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/elevation"
                    android:textColor="@color/LightYellow"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/distanceTravelledTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.486"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/elevatorImage"
                    android:layout_width="21dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:elevation="2dp"
                    android:src="@drawable/ic_baseline_elevator_24"
                    app:layout_constraintBottom_toBottomOf="@+id/currentElevation"
                    app:layout_constraintEnd_toStartOf="@+id/currentElevation"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/currentElevation"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/currentDistanceTraveled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/meter"
                    android:textColor="@color/LightYellow"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.484"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/distanceTravelledTitle"
                    android:layout_width="124dp"
                    android:layout_height="22dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/distance_travelled"
                    android:textColor="@color/LightYellow"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/currentDistanceTraveled"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.48"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/compass"
                    android:layout_width="59dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="44dp"
                    android:src="@drawable/ic_baseline_navigation_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/redDot"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/recording"
                    android:src="@drawable/ic_baseline_red_dot_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/currentDistanceTraveled"
                    app:layout_constraintHorizontal_bias="0.571"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        +

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-98dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/setMapType"
            android:layout_width="114dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="MAP TYPE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/selectOverlayButton"
            android:layout_width="114dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="Floor Overlay"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetToAutoButton" />

        <Button
            android:id="@+id/resetToAutoButton"
            android:layout_width="114dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="Automatic Overlay"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setMapType" />


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/circular_white_background"
            app:layout_constraintBottom_toTopOf="@+id/currentPositionCard"
            app:layout_constraintEnd_toEndOf="@+id/map">

            <ImageButton
                android:id="@+id/rcntr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_baseline_location_red" />

        </FrameLayout>

        <ImageButton
            android:id="@+id/indoorMapAvailableIndicator"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/indoormap"
            app:layout_constraintBottom_toTopOf="@+id/currentPositionCard"
            app:layout_constraintEnd_toStartOf="@+id/frameLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>